working on hero

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,600;1,500&family=Inter:wght@300;400;600;700;800&family=Josefin+Sans:ital,wght@0,300;0,600;1,400&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>My Port</title>
   </head>
   <body>
+    <!-- nav-section -->
     <nav class="nav-bar">
       <div class="nav-both">
         <div class="logo">
@@ -44,5 +49,130 @@
         </div>
       </div>
     </nav>
+    <!-- hero-section -->
+    <section class="hero">
+      <div class="top">
+        <h1>Hello, I'm Jeremiah</h1>
+        <p>
+          I'm a web developer with a deep love for turning concepts into
+          captivating online experiences. My journey in the world of web
+          development has been a thrilling exploration of codes, and continuous
+          learning.
+        </p>
+        <button>Hire me</button>
+      </div>
+      <div class="bott">
+        <img src="./mypic.jpg" alt="mypic" />
+      </div>
+    </section>
+    <div>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias quae
+      veritatis consequatur voluptates eius fugiat qui enim soluta numquam, ex
+      obcaecati, ad laborum accusantium assumenda pariatur ipsam repellat
+      consequuntur eligendi at quibusdam? Reiciendis, incidunt. Beatae dicta
+      impedit ratione accusamus, facilis molestias eos, eaque placeat distinctio
+      quis mollitia, quas molestiae odit doloribus recusandae nihil commodi
+      similique perspiciatis ex. Ea accusantium velit molestias atque tempora
+      iusto iste nihil similique laboriosam est reprehenderit provident ad,
+      voluptatum repudiandae temporibus nulla, recusandae repellendus optio
+      rerum. Maiores, aliquam suscipit. Quo dicta ex voluptate ad repellendus
+      itaque dolor corrupti, exercitationem eos? Ea, consequatur. Repellendus
+      reiciendis rerum, autem dicta amet fugit tempora, ratione debitis saepe,
+      laudantium necessitatibus? Cupiditate in aut ipsum, corporis quia
+      sapiente, atque sequi nostrum culpa ea ab ut nemo veniam blanditiis
+      perspiciatis aliquid esse excepturi repudiandae. Labore recusandae ipsam
+      esse quia explicabo adipisci obcaecati vitae. Placeat odit beatae
+      veritatis sint necessitatibus accusamus aspernatur a earum quae,
+      exercitationem eligendi amet porro saepe. Placeat quo cumque numquam
+      facilis, minus ut illo veritatis illum minima error reiciendis esse hic
+      totam blanditiis laborum similique? At ipsam tempore, placeat assumenda
+      adipisci nihil quae quos, dolorum ab itaque repellat non quia? Libero
+      recusandae iusto est reprehenderit laborum, velit quisquam id labore
+      voluptates aliquid eius consequatur aspernatur voluptatibus, pariatur
+      inventore natus alias. Aperiam consequuntur totam officiis sed ipsum
+      accusantium, non omnis dolor laborum eius voluptatem rem alias cupiditate,
+      labore quae inventore iste, quam molestiae natus esse placeat vero? Eos
+      deleniti odio earum quidem veniam neque iusto aspernatur est quo! Sapiente
+      nisi inventore eos temporibus voluptate cupiditate voluptatibus sunt
+      cumque mollitia distinctio omnis vel, doloribus quos deleniti ex hic
+      corrupti. Repellat provident quos ut expedita nostrum illum libero
+      voluptates, ipsam earum deleniti natus laboriosam possimus eos repellendus
+      distinctio similique qui iusto cum facilis. Totam odio quidem placeat
+      provident. Velit ad aut porro recusandae nihil amet quaerat itaque in,
+      cum, vero, mollitia non est quisquam numquam maiores officia eius ipsum.
+      Quidem temporibus excepturi eveniet harum libero? Quo fuga reiciendis
+      praesentium, eum aliquam ipsam accusamus blanditiis voluptatum perferendis
+      cupiditate placeat non sint minima expedita ducimus quam veniam. Dolor qui
+      cupiditate, veniam aliquam harum deleniti rem blanditiis, facilis
+      praesentium magnam molestias dicta, sed soluta debitis sequi laborum!
+      Dolorem fugit consectetur quos ab quis, laboriosam architecto? Incidunt,
+      magni excepturi explicabo sed delectus, quos fugiat voluptas illo
+      voluptatibus repudiandae aperiam ullam earum fuga, nulla laboriosam
+      nesciunt soluta corrupti molestiae quidem molestias beatae dolores dolore
+      sapiente! Blanditiis alias voluptatum eum labore quo obcaecati similique
+      commodi! Et veritatis corrupti, itaque minus rem cumque. Quidem veritatis
+      est ipsam et quam tempore dolore esse odit vitae officiis iure laboriosam
+      fugiat eos dolorem quo numquam debitis ullam rem quisquam ad, ducimus sed
+      laudantium! Maiores totam saepe illo. Vel eaque mollitia id voluptate
+      dolor hic iste, temporibus qui deleniti soluta dolores sunt asperiores
+      totam perferendis corrupti nam impedit. Unde non ipsa minima minus nobis
+      maiores nulla iure veritatis animi error, a nesciunt quo, vero molestias
+      numquam perspiciatis, pariatur aliquam excepturi? Recusandae perferendis
+      dolores quibusdam autem officiis. Esse assumenda inventore voluptatibus
+      necessitatibus aut minima eveniet veniam, hic totam expedita, repellendus
+      aspernatur similique vero incidunt voluptates. Dicta obcaecati vitae
+      inventore labore a. Magni voluptate consequatur pariatur quod quia cumque
+      nam deleniti, ipsa vero et asperiores iste obcaecati odio necessitatibus.
+      Ut, at iure! Harum illum commodi, inventore dicta necessitatibus at soluta
+      praesentium mollitia dignissimos adipisci iusto ratione aliquid rerum vel
+      ad doloremque. Quod doloremque, accusamus impedit beatae consequuntur,
+      molestias odio explicabo assumenda voluptatum nisi recusandae. Asperiores
+      minima eos dolorem tempore commodi exercitationem unde. Nisi eaque, autem,
+      deleniti quas enim consequuntur, mollitia corrupti reiciendis dignissimos
+      vel iure! Iste, maiores quam. Dolor sint molestias quasi dolorem,
+      repudiandae pariatur, nemo harum illum deserunt qui accusamus eum minima
+      sapiente nobis officia sed, possimus quas adipisci dolorum mollitia
+      tempora atque accusantium ipsam fuga? Corporis, explicabo ducimus quo
+      rerum obcaecati, ea beatae dignissimos tempora excepturi eum nostrum
+      possimus aut consequatur. Voluptas architecto ipsam quisquam dolor
+      temporibus, aspernatur hic eius, fugit placeat numquam provident
+      obcaecati. Molestiae enim dicta aliquam eius reprehenderit praesentium
+      fugit incidunt vitae nobis, quam ex suscipit modi, rem porro, excepturi
+      delectus? Quos deleniti quam fugiat, odio animi laborum repellat
+      repellendus, doloremque earum maxime aliquid, ut ea maiores hic dolorum
+      quod dignissimos placeat ratione? Velit dignissimos numquam sit quam quia
+      qui cupiditate rerum voluptatum nostrum ut, reiciendis, tempora adipisci
+      consequatur. Reprehenderit odit reiciendis optio doloribus, repellendus
+      consectetur cumque minus facere mollitia repudiandae vitae iste impedit
+      nostrum placeat velit libero ab voluptatem illum aut esse consequatur in
+      blanditiis natus! Officiis, doloribus? Ullam pariatur exercitationem
+      inventore delectus quidem nobis laudantium blanditiis qui modi saepe. Vero
+      iure nobis nulla ab eaque nam repellat quaerat consequatur, eius autem
+      voluptatum, optio et! Velit facere alias exercitationem repellat, sint
+      aliquam, doloribus magni, voluptas nemo ipsum sequi dignissimos ex
+      accusantium laborum blanditiis! Dolorem consequatur hic adipisci commodi
+      omnis in, dolorum et corrupti tempore cum velit nesciunt eos neque quo,
+      magnam nihil tenetur reiciendis unde sequi vero suscipit. Molestias
+      explicabo molestiae repudiandae quo nihil tempore totam impedit quis
+      deleniti! Similique ducimus, asperiores, corrupti ullam voluptate libero
+      animi pariatur dicta, iste esse nisi eligendi totam minima excepturi
+      soluta laborum sed accusamus. Dolor vitae quae facere perspiciatis esse
+      sunt mollitia corporis, voluptates aspernatur vel hic iste saepe eum
+      ratione ipsam magni minima iusto nam eveniet temporibus accusantium quia
+      ea itaque. Iure voluptatibus nostrum mollitia modi ea, sed, minima totam
+      aut, tempore sequi adipisci nobis eos voluptate corporis est atque
+      reiciendis in earum. Ducimus est ullam fuga, impedit quaerat nam neque
+      velit delectus sunt labore aliquam sint, eum consequatur facere nobis
+      minus. Aspernatur itaque non ab et accusantium maiores possimus eius velit
+      quidem veritatis perferendis vitae odit ullam voluptatem, aperiam, sint
+      deleniti aliquid aliquam iste porro repellendus. Dignissimos quidem sequi
+      ipsam culpa, esse, provident laudantium dolore nesciunt assumenda totam
+      voluptate rerum maiores reiciendis odio repudiandae. Quis illum itaque
+      omnis est eos veritatis? Et, illum in harum tenetur quos sint laboriosam,
+      modi reiciendis eaque, dicta odio voluptate eum maiores non optio nihil
+      voluptatem eius libero eos blanditiis doloremque eveniet. Voluptatibus
+      harum rerum quaerat? Voluptatem sit beatae nobis, tenetur alias libero
+      odio omnis. Minus, eius!
+    </div>
   </body>
 </html>
