finished skills section for mobile first

--- a/index.html
+++ b/index.html
@@ -82,81 +82,95 @@
         <img src="./assets/drawing.svg" alt="drawing" />
       </div>
     </section>
-    <section class="projecs" id="projects">
-      <div>
-        <h2>Projects</h2>
-        <div class="card-row">
-          <div class="cards">
-            <img src="./Assets/Birght-future.jpg" alt="Birght-future" />
-            <h3>Bright-future</h3>
-            <hr />
-            <p>
-              This is a great small challenge to help get you used to building
-              to a design. There's no JS in this project, so you'll be able to
-              focus on your HTML & CSS skills.
-            </p>
-            <button class="btn">Look it up</button>
-          </div>
-          <div class="cards">
-            <img src="./Assets/base-apparel.png" alt="base-apparel" />
-            <h3>Base Apparel</h3>
-            <hr />
-            <p>
-              This is a great small challenge to help get you used to building
-              to a design. There's no JS in this project, so you'll be able to
-              focus on your HTML & CSS skills.
-            </p>
-            <button class="btn">Look it up</button>
-          </div>
+    <!-- project-section -->
+    <section class="projects" id="projects">
+      <h2>Projects</h2>
+      <div class="card-row">
+        <div class="cards">
+          <img src="./Assets/Birght-future.jpg" alt="Birght-future" />
+          <h3>Bright-future</h3>
+          <hr />
+          <p>
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
+          </p>
+          <button class="btn">Look it up</button>
         </div>
-        <div class="card-row">
-          <div class="cards">
-            <img src="./Assets/learn-to-code.png" alt="learn-to-code" />
-            <h3>Learn to code</h3>
-            <hr />
-            <p>
-              This is a great small challenge to help get you used to building
-              to a design. There's no JS in this project, so you'll be able to
-              focus on your HTML & CSS skills.
-            </p>
-            <button class="btn">Look it up</button>
-          </div>
-          <div class="cards">
-            <img src="./Assets/crest.png" alt="crest" />
-            <h3>Crest</h3>
-            <hr />
-            <p>
-              This is a great small challenge to help get you used to building
-              to a design. There's no JS in this project, so you'll be able to
-              focus on your HTML & CSS skills.
-            </p>
-            <button class="btn">Look it up</button>
-          </div>
+        <div class="cards">
+          <img src="./Assets/base-apparel.png" alt="base-apparel" />
+          <h3>Base Apparel</h3>
+          <hr />
+          <p>
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
+          </p>
+          <button class="btn">Look it up</button>
         </div>
-        <div class="card-row">
-          <div class="cards">
-            <img src="./Assets/Perfume.png" alt="Perfume" />
-            <h3>Burberry mint</h3>
-            <hr />
-            <p>
-              This is a great small challenge to help get you used to building
-              to a design. There's no JS in this project, so you'll be able to
-              focus on your HTML & CSS skills.
-            </p>
-            <button class="btn">Look it up</button>
-          </div>
-          <div class="cards">
-            <img src="./Assets/Get-insights.png" alt="Get-insights" />
-            <h3>Stats Preview</h3>
-            <hr />
-            <p>
-              This is a great small challenge to help get you used to building
-              to a design. There's no JS in this project, so you'll be able to
-              focus on your HTML & CSS skills.
-            </p>
-            <button class="btn">Look it up</button>
-          </div>
+      </div>
+      <div class="card-row">
+        <div class="cards">
+          <img src="./Assets/learn-to-code.png" alt="learn-to-code" />
+          <h3>Learn to code</h3>
+          <hr />
+          <p>
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
+          </p>
+          <button class="btn">Look it up</button>
         </div>
+        <div class="cards">
+          <img src="./Assets/crest.png" alt="crest" />
+          <h3>Crest</h3>
+          <hr />
+          <p>
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
+          </p>
+          <button class="btn">Look it up</button>
+        </div>
+      </div>
+      <div class="card-row">
+        <div class="cards">
+          <img src="./Assets/Perfume.png" alt="Perfume" />
+          <h3>Burberry mint</h3>
+          <hr />
+          <p>
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
+          </p>
+          <button class="btn">Look it up</button>
+        </div>
+        <div class="cards">
+          <img src="./Assets/Get-insights.png" alt="Get-insights" />
+          <h3>Stats Preview</h3>
+          <hr />
+          <p>
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
+          </p>
+          <button class="btn">Look it up</button>
+        </div>
+      </div>
+    </section>
+    <!-- skills-sections -->
+    <section class="skills">
+      <h2>Skills</h2>
+      <div class="skills-grid">
+        <ul>
+          <li>Git</li>
+          <li>Communication</li>
+          <li>Teamwork</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Quick learning</li>
+        </ul>
       </div>
     </section>
   </body>
