--- a/index.html
+++ b/index.html
@@ -169,9 +169,12 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Quick learning</li>
+          <li>Optimization</li>
         </ul>
       </div>
     </section>
+    <footer>
+      <p>&copy; 2023 [ Jeremiah Edum ] . All rights reserved.</p>
+    </footer>
   </body>
 </html>
